--- a/TSOSConfig/MainWindow.xaml
+++ b/TSOSConfig/MainWindow.xaml
@@ -8,7 +8,7 @@
         xmlns:view="clr-namespace:TSOSConfig.Views"
         xmlns:viewmodel="clr-namespace:TSOSConfig.ViewModels"
         mc:Ignorable="d"
-        Title="TSOS Config" Height="700" Width="516"
+        Title="TSOS Config" Height="700" Width="710"
         WindowStartupLocation = "CenterScreen"
         DataContext="{Binding Source={x:Static viewmodel:MainViewModel.Instance}}">
     <Grid>
@@ -26,12 +26,12 @@
         <Expander Grid.Row="2"
                   IsExpanded="False"
                   Header="Preview TSOS.XML">
-            <TextBox x:Name="TextBox" Height="220"
-                               IsReadOnly="True"
+            <ScrollViewer x:Name="ScrollViewer" Height="220"
                                FontFamily="Courier New"
                                FontSize="14"
+                               HorizontalScrollBarVisibility="Auto"
                                Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"
-                               Text="{Binding File.RawXML}"/>
+                               Content="{Binding File.RawXML}"/>
         </Expander>
     </Grid>
 </ribbon:RibbonWindow>
