--- a/TSOSConfig/MainWindow.xaml
+++ b/TSOSConfig/MainWindow.xaml
@@ -8,7 +8,7 @@
         xmlns:view="clr-namespace:TSOSConfig.Views"
         xmlns:viewmodel="clr-namespace:TSOSConfig.ViewModels"
         mc:Ignorable="d"
-        Title="TSOS Config" Height="700" Width="710"
+        Title="TSOS Config" Height="720" Width="640"
         WindowStartupLocation = "CenterScreen"
         DataContext="{Binding Source={x:Static viewmodel:MainViewModel.Instance}}">
     <Grid>
@@ -24,7 +24,7 @@
         </ContentControl>
 
         <Expander Grid.Row="2"
-                  IsExpanded="False"
+                  IsExpanded="True"
                   Header="Preview TSOS.XML">
             <ScrollViewer x:Name="ScrollViewer" Height="220"
                                FontFamily="Courier New"
