--- a/TSOSConfig/Views/ConfigureView.xaml
+++ b/TSOSConfig/Views/ConfigureView.xaml
@@ -8,7 +8,7 @@
              xmlns:converters="clr-namespace:TSOSConfig.HelperClasses.Converters"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              DataContext="{Binding Source={x:Static viewmodel:ConfigureViewModel.Instance}}"
-             mc:Ignorable="d" d:DesignWidth="710">
+             mc:Ignorable="d" d:DesignWidth="640">
     
     <UserControl.Resources>
         <converters:SelectionToEnabledConverter x:Key="SelectionToEnabledConverter"/>
@@ -63,18 +63,21 @@
         <Grid Grid.Row="0">
             <GroupBox Header="TSOS Configuration">
                 <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                    </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="350*"/>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
                     <Grid Grid.Column="0">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto"/>
                             <ColumnDefinition Width="Auto"/>
                         </Grid.ColumnDefinitions>
-                        <Label Grid.Column="0" Content="Recurring Time:" Margin="5,5,0,5"/>
-                        <xctk:IntegerUpDown Grid.Column="1" Width="Auto" MinWidth="50" Margin="5,5,10,5" Minimum="0">
+                        <Label Grid.Column="0" Content="Recurring Time:" Margin="10,5,0,5"/>
+                        <xctk:IntegerUpDown Grid.Column="1" Width="Auto" MinWidth="130" Margin="10,5,10,5" Minimum="0">
                             <xctk:IntegerUpDown.Value>
                                 <Binding Path="Configuration.RecurringTime" UpdateSourceTrigger="PropertyChanged">
                                     <Binding.ValidationRules>
@@ -87,10 +90,10 @@
                     <Grid Grid.Column="1">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition/>
                         </Grid.ColumnDefinitions>
-                        <Label Grid.Column="0" Content="Mail Server:" Margin="5,5,0,5"/>
-                        <TextBox Grid.Column="1" MinWidth="90" Width="Auto" Margin="5,5,15,5">
+                        <Label Grid.Column="0" Content="Mail Server:" Margin="10,5,0,5"/>
+                        <TextBox Grid.Column="1" MinWidth="180" Width="Auto" Margin="10,5,30,5">
                             <TextBox.Text>
                                 <Binding Path="Configuration.MailServer" UpdateSourceTrigger="PropertyChanged">
                                     <Binding.ValidationRules>
@@ -100,13 +103,13 @@
                             </TextBox.Text>
                         </TextBox>
                     </Grid>
-                    <Grid Grid.Column="2">
+                    <Grid Grid.Row="1" Grid.ColumnSpan="2">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition/>
                         </Grid.ColumnDefinitions>
                         <Label Grid.Column="0" Content="MySQL Connection String:" Margin="5,5,0,5"/>
-                        <TextBox Grid.Column="1" MinWidth="150" Width="Auto" Margin="5,5,10,5">
+                        <TextBox Grid.Column="1" Margin="5,5,30,5">
                             <TextBox.Text>
                                 <Binding Path="Configuration.MySQLConnectionString" UpdateSourceTrigger="PropertyChanged">
                                     <Binding.ValidationRules>
@@ -123,7 +126,7 @@
             <GroupBox Header="Database">
                 <Grid>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="330"/>
+                        <ColumnDefinition Width="240"/>
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
                     <ListView x:Name="DatabaseList" Grid.Column="0" MinHeight="150" MinWidth="100" Margin="7" 
